[vigil] renewed
now uses sql again